--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h1 {
   padding: 12px;
   margin-bottom: 20px;
   box-shadow: 1px 1px 2px #999;
+  cursor: pointer; /* <<< torna o h1 "botão" */
 }
 
 /* ------------------------
@@ -284,3 +285,4 @@ button:hover {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
