--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: Tahoma, Verdana, Arial, sans-serif;
   margin: 20px;
-  background: linear-gradient(180deg, #CFE7FF 0%, #EAF6FF 100%);
+  background-image: url(outubro.png);
   color: #000;
   -webkit-font-smoothing: antialiased;
 }
@@ -285,4 +285,5 @@ button:hover {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 
