--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: Tahoma, Verdana, Arial, sans-serif;
   margin: 20px;
-  background-image: url(outubro.png);
+  background-image: url(halloween.png);
   color: #000;
   -webkit-font-smoothing: antialiased;
 }
@@ -285,5 +285,6 @@ button:hover {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 
 
